# ida-sdk

./: .gitignore  .gitmodules  README.md
.github/workflows/: build.yml
src/: .gitignore  CMakeLists.txt
src/dbg/: CMakeLists.txt
src/dbg/linux/: CMakeLists.txt
src/dbg/win32/: CMakeLists.txt
src/idalib/examples/: CMakeLists.txt
src/ldr/: CMakeLists.txt
src/ldr/aif/: CMakeLists.txt
src/ldr/amiga/: CMakeLists.txt
src/ldr/aof/: CMakeLists.txt
src/ldr/aout/: CMakeLists.txt
src/ldr/dos/: CMakeLists.txt
src/ldr/dump/: CMakeLists.txt
src/ldr/geos/: CMakeLists.txt
src/ldr/hex/: CMakeLists.txt
src/ldr/hpsom/: CMakeLists.txt
src/ldr/intelomf/: CMakeLists.txt
src/ldr/javaldr/: CMakeLists.txt
src/ldr/mas/: CMakeLists.txt
src/ldr/nlm/: CMakeLists.txt
src/ldr/os9/: CMakeLists.txt
src/ldr/pef/: CMakeLists.txt
src/ldr/pilot/: CMakeLists.txt
src/ldr/qnx/: CMakeLists.txt
src/ldr/rt11/: CMakeLists.txt
src/ldr/script_ldrs/: CMakeLists.txt
src/ldr/snes/: CMakeLists.txt
src/ldr/w32run/: CMakeLists.txt
src/module/: CMakeLists.txt
src/module/6502/: CMakeLists.txt
src/module/65816/: CMakeLists.txt
src/module/78k0/: CMakeLists.txt
src/module/78k0s/: CMakeLists.txt
src/module/80196/: CMakeLists.txt
src/module/arc/: CMakeLists.txt
src/module/avr/: CMakeLists.txt
src/module/c39/: CMakeLists.txt
src/module/cr16/: CMakeLists.txt
src/module/dsp56k/: CMakeLists.txt
src/module/f2mc/: CMakeLists.txt
src/module/fr/: CMakeLists.txt
src/module/h8/: CMakeLists.txt
src/module/h8500/: CMakeLists.txt
src/module/hppa/: CMakeLists.txt
src/module/i51/: CMakeLists.txt
src/module/i860/: CMakeLists.txt
src/module/i960/: CMakeLists.txt
src/module/java/: CMakeLists.txt
src/module/kr1878/: CMakeLists.txt
src/module/m32r/: CMakeLists.txt
src/module/m740/: CMakeLists.txt
src/module/m7700/: CMakeLists.txt
src/module/m7900/: CMakeLists.txt
src/module/mn102/: CMakeLists.txt
src/module/nec850/: CMakeLists.txt
src/module/oakdsp/: CMakeLists.txt
src/module/pdp11/: CMakeLists.txt
src/module/pic/: CMakeLists.txt
src/module/sam8/: CMakeLists.txt
src/module/script/: CMakeLists.txt
src/module/st20/: CMakeLists.txt
src/module/st7/: CMakeLists.txt
src/module/st9/: CMakeLists.txt
src/module/tlcs900/: CMakeLists.txt
src/module/tms320c1/: CMakeLists.txt
src/module/tms320c3/: CMakeLists.txt
src/module/tms320c5/: CMakeLists.txt
src/module/tms320c54/: CMakeLists.txt
src/module/tms320c55/: CMakeLists.txt
src/module/tms320c6/: CMakeLists.txt
src/module/xa/: CMakeLists.txt
src/module/z8/: CMakeLists.txt
src/module/z80/: CMakeLists.txt
src/plugins/: CMakeLists.txt
src/plugins/callee/: CMakeLists.txt
src/plugins/choose/: CMakeLists.txt
src/plugins/custdata/: CMakeLists.txt
src/plugins/custview/: CMakeLists.txt
src/plugins/cvt64_sample/: CMakeLists.txt
src/plugins/ex_callcnv/: CMakeLists.txt
src/plugins/ex_debidc/: CMakeLists.txt
src/plugins/ex_events1/: CMakeLists.txt
src/plugins/ex_merge_ldrdata/: CMakeLists.txt
src/plugins/extlang/: CMakeLists.txt
src/plugins/findcrypt2/: CMakeLists.txt
src/plugins/formchooser/: CMakeLists.txt
src/plugins/formsample/: CMakeLists.txt
src/plugins/funclist/: CMakeLists.txt
src/plugins/getlines/: CMakeLists.txt
src/plugins/hello/: CMakeLists.txt
src/plugins/hexview/: CMakeLists.txt
src/plugins/highlighter/: CMakeLists.txt
src/plugins/ht_output/: CMakeLists.txt
src/plugins/ht_view/: CMakeLists.txt
src/plugins/idapython/: CMakeLists.txt
src/plugins/mex1/: CMakeLists.txt
src/plugins/mex2/: CMakeLists.txt
src/plugins/mex3/: CMakeLists.txt
src/plugins/mex4/: CMakeLists.txt
src/plugins/mtsample/: CMakeLists.txt
src/plugins/navcolor/: CMakeLists.txt
src/plugins/openform/: CMakeLists.txt
src/plugins/pdb/: CMakeLists.txt  msdia.cpp  pdb.cfg  pdb.cpp  pdb.hpp
src/plugins/procext/: CMakeLists.txt
src/plugins/qproject/: CMakeLists.txt
src/plugins/qwindow/: CMakeLists.txt
src/plugins/script_plg/: CMakeLists.txt
src/plugins/snapshots/: CMakeLists.txt
src/plugins/tracer/: CMakeLists.txt
src/plugins/tracing_api/: CMakeLists.txt
src/plugins/ugraph/: CMakeLists.txt
src/plugins/ugraph2/: CMakeLists.txt
src/plugins/ugraph3/: CMakeLists.txt
src/plugins/ui_requests/: CMakeLists.txt
src/plugins/uiswitch/: CMakeLists.txt
src/plugins/uunp/: CMakeLists.txt
src/plugins/vcsample/: CMakeLists.txt
src/plugins/vds1/: CMakeLists.txt
src/plugins/vds10/: CMakeLists.txt
src/plugins/vds11/: CMakeLists.txt
src/plugins/vds12/: CMakeLists.txt
src/plugins/vds13/: CMakeLists.txt
src/plugins/vds14/: CMakeLists.txt
src/plugins/vds15/: CMakeLists.txt
src/plugins/vds16/: CMakeLists.txt
src/plugins/vds17/: CMakeLists.txt
src/plugins/vds18/: CMakeLists.txt
src/plugins/vds19/: CMakeLists.txt
src/plugins/vds2/: CMakeLists.txt
src/plugins/vds20/: CMakeLists.txt
src/plugins/vds3/: CMakeLists.txt
src/plugins/vds4/: CMakeLists.txt
src/plugins/vds5/: CMakeLists.txt
src/plugins/vds6/: CMakeLists.txt
src/plugins/vds7/: CMakeLists.txt
src/plugins/vds8/: CMakeLists.txt
src/plugins/vds9/: CMakeLists.txt
src/plugins/z80dbg/: CMakeLists.txt
