# IDA SDK Loaders
if(NOT PROJECT_NAME)
    cmake_minimum_required(VERSION 3.27)
    project(idasdk_loaders)
    set(CMAKE_CXX_STANDARD 17)
    include(${CMAKE_CURRENT_SOURCE_DIR}/../cmake/bootstrap.cmake)
    find_package(idasdk REQUIRED)
endif()

# Add all loaders
add_subdirectory(aif)
add_subdirectory(amiga)
add_subdirectory(aof)
add_subdirectory(aout)
add_subdirectory(dos)
add_subdirectory(dump)
add_subdirectory(geos)
add_subdirectory(hex)
add_subdirectory(hpsom)
add_subdirectory(intelomf)
add_subdirectory(javaldr)
add_subdirectory(mas)
add_subdirectory(nlm)
add_subdirectory(os9)
add_subdirectory(pef)
add_subdirectory(pilot)
add_subdirectory(qnx)
add_subdirectory(rt11)
add_subdirectory(snes)
add_subdirectory(w32run)
