# IDA SDK Processor Modules
if(NOT PROJECT_NAME)
    cmake_minimum_required(VERSION 3.27)
    project(idasdk_modules)
    set(CMAKE_CXX_STANDARD 17)
    include(${CMAKE_CURRENT_SOURCE_DIR}/../cmake/bootstrap.cmake)
    find_package(idasdk REQUIRED)
endif()

# Add all processor modules
add_subdirectory(6502)
add_subdirectory(65816)
add_subdirectory(78k0)
add_subdirectory(78k0s)
add_subdirectory(80196)
add_subdirectory(arc)
add_subdirectory(avr)
add_subdirectory(c39)
add_subdirectory(cr16)
add_subdirectory(dsp56k)
add_subdirectory(f2mc)
add_subdirectory(fr)
add_subdirectory(h8)
add_subdirectory(h8500)
add_subdirectory(hppa)
add_subdirectory(i51)
add_subdirectory(i860)
add_subdirectory(i960)
add_subdirectory(java)
add_subdirectory(kr1878)
add_subdirectory(m32r)
add_subdirectory(m740)
add_subdirectory(m7700)
add_subdirectory(m7900)
add_subdirectory(mn102)
add_subdirectory(nec850)
add_subdirectory(oakdsp)
add_subdirectory(pdp11)
add_subdirectory(pic)
add_subdirectory(sam8)
add_subdirectory(st20)
add_subdirectory(st7)
add_subdirectory(st9)
add_subdirectory(tlcs900)
add_subdirectory(tms320c1)
add_subdirectory(tms320c3)
add_subdirectory(tms320c5)
add_subdirectory(tms320c54)
add_subdirectory(tms320c55)
add_subdirectory(tms320c6)
add_subdirectory(xa)
add_subdirectory(z8)
add_subdirectory(z80)
